Signout and app guarding

--- a/src/index.css
+++ b/src/index.css
@@ -41,3 +41,6 @@ input[type=email]:not(.browser-default):focus:not([readonly]) + label,
 input[type=password]:not(.browser-default):focus:not([readonly]) + label{
   color: #ec407a !important;
 }
+.link {
+  cursor: pointer;
+}
